# know-thy-taste

./: .gitignore  README.md  pyproject.toml  test-quality.js
public/: index.html
public/js/: analysis.js  app.js  db.js  questions.js  tmdb.js
src/ktt/: __init__.py  __main__.py
src/ktt/analysis/: __init__.py  insights.py  patterns.py  specificity.py
src/ktt/cli/: __init__.py  main.py  session.py  ui.py
src/ktt/core/: __init__.py  auth.py  database.py  encryption.py  models.py
src/ktt/integrations/: __init__.py  tmdb.py
src/ktt/privacy/: __init__.py  consent.py  deletion.py  export.py
src/ktt/questions/: __init__.py  bank.py  followups.py  metacognitive.py  scaffolds.py
src/ktt/web/: __init__.py  app.py
src/ktt/web/static/css/: styles.css
src/ktt/web/static/js/: app.js  db.js
src/ktt/web/templates/: index.html
tests/: __init__.py  test_encryption.py  test_questions.py
