[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "know-thy-taste"
version = "0.1.0"
description = "A CLI for metacognitive exploration of your movie preferences"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Josh Weiss" }
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "sqlalchemy>=2.0.0",
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
ktt = "ktt.cli.main:app"
ktt-web = "ktt.web.app:run"

[tool.hatch.build.targets.wheel]
packages = ["src/ktt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
